--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,7 @@
 # Change log
 
 Date          Version   Comment
+2015/09/01    3.3.1     Support target attribute in hyperlinks to allow links to open in new window
 2015/09/01    3.3.0     Improve reliability of the question exports if question text content is badly formatted
 2015/08/19    3.2.2     Grab extra memory to allow very large Word files to be exported, handle HTML markup in exports better
 2015/08/04    3.2.1     Grab extra memory to allow very large Word files to be imported,
