Clean up code to pass codechecker and PHPDoc tests

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -31,7 +31,7 @@ Date          Version   Comment
                         Also add support for tables and lists inside item components.
 
 2014/10/08    2.10.1    Fix bug in handling of image filenames containing spaces.
-2014/08/12    2.10      Support case-sensitivity and selection style and orientation in Cloze Short Answer / Multiple choice subquestions.
+2014/08/12    2.10      Support case-sensitivity and selection style and orientation in Cloze SA and MC subquestions.
                         Support specification of default mark in Cloze questions. Fix merging of paragraphs.
 2014/07/10    2.9.2     Fix syntax error in db/install.php
 2014/07/10    2.9.1     Fix error in registration process set-up, which prevented registration to set 10-question limit.
@@ -71,4 +71,3 @@ Date          Version   Comment
                         textancillary image element.
 
 2013/03/15    2.4       Improve handling of Cloze question formatting when exporting to Word format.
-
