Fix handling of non-ASCII characters inside Cloze subquestions

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,7 +1,7 @@
 # Change log
 
 Date          Version   Comment
-2015/12/30    3.5.2     Fix error Cloze Short-Answer import processing, and '--' in text in export processing.
+2015/12/30    3.5.2     Fix error in Cloze MC/SA subquestion import processing, and '--' in text in export processing.
 2015/12/15    3.5.1     Fix error in non-ASCII characters and alignment when exporting questions.
 2015/12/14    3.5.0     Support OU question types 'Drag and drop onto image,' 'Drag and drop markers',
                         'Drag and drop into text' and 'Select missing words',
