Fix incorrect conversion of Cloze text

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,7 @@
 # Change log
 
 Date          Version   Comment
+2016/01/08    3.5.5     Fix incorrect conversion of Cloze text.
 2016/01/05    3.5.4     Improve handling of exported images to avoid bookmark name clashes.
 2016/01/05    3.5.3     Improve handling of adjacent bold/italic formatting when importing Cloze questions.
 2015/12/30    3.5.2     Fix error in Cloze MC/SA subquestion import processing, and '--' in text in export processing.
