--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,7 @@
 # Change log
 
 Date          Version   Comment
+2016/09/08    3.5.8     Strip out VML/drawingML markup from Word 2010 files
 2016/06/12    3.5.7     Fix equation problem, improve table handling and Cloze question formatting
 2016/01/14    3.5.6     Add PHPUnit tests for exports, remove debugging.
 2016/01/08    3.5.5     Fix incorrect conversion of Cloze text.
