--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,7 @@
 # Change log
 
 Date          Version   Comment
+2016/10/31    3.5.10    Retain table border style, handle WMF images better, support pre-formatted text
 2016/09/09    3.5.9     Strip out OfficeMath revision control markup from Word 2010 files
 2016/09/08    3.5.8     Strip out VML/drawingML markup from Word 2010 files
 2016/06/12    3.5.7     Fix equation problem, improve table handling and Cloze question formatting
