--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,7 @@
 # Change log
 
 Date          Version   Comment
+2017/04/17    3.5.16    Use canonical reference to temp directory, start using PHPStorm IDE
 2017/01/05    3.5.15    Fix error when handling empty table cells
 2016/12/16    3.5.14    Improve RTL language support again
 2016/11/14    3.5.13    Improve localisation by adding more strings for use in Word template, improve RTL language support
