--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,7 @@
 # Change log
 
 Date          Version   Comment
+2017/08/06    3.5.18    Handle Bootstrap Alert components
 2017/05/21    3.5.17    Handle penalty value of 0% on multiple tries
 2017/04/17    3.5.16    Use canonical reference to temp directory, start using PHPStorm IDE
 2017/01/05    3.5.15    Fix error when handling empty table cells
