--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,7 @@
 # Change log
 
 Date          Version   Comment
+2020/07/10    3.6.3     Stop leaving temporary files lying around.
 2020/07/10    3.6.2     Add support for Office MML m:deg element, which caused an error.
 2020/06/18    3.6.1     Add support for 'No online text' responses and accepted file types.
 2019/07/15    3.6.0     Add support for optional ID number field in Moodle 3.6, plus small Missing Word type bug-fixes.
