--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,7 @@
 # Change log
 
 Date          Version   Comment
+2022/04/04    3.9.3     Support "Import questions" command in Lesson activity (thanks to drobayo for the code).
 2021/08/31    3.9.2     Improve support for Lesson question imports.
 2021/08/23    3.9.1     Fix dependency on Book Word converter.
 2021/08/21    3.9.0     Use Book Word import wordconverter class for import/export of Word files.
